package com.uitopic.restock.platform.sales.domain.model.valueobjects;

/**
 * Represents the status of a sales order.
 */
public enum SalesOrderStatus {
    PENDING,
    CONFIRMED,
    COMPLETED,
    CANCELLED
}
